--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IMCApp"
         tools:targetApi="31">
+
         <activity
-            android:name=".IMCCalculo"
+            android:name="co.edu.udenar.victor.imcapp.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".IMCCalculo"
+            android:exported="true">
+            <!-- ... otras configuraciones ... -->
+        </activity>
+
     </application>
 
 </manifest>
